# pseuCompiler

./: .gitignore  Cargo.toml  RELEASE.md  build-wasm.bat  build-wasm.sh  create-release.bat  docs.js  index.html  language-service.js  main.js
.github/workflows/: deploy.yml
code/: array_operations.pseu  case_statement.pseu  character_functions.pseu  example0.pseu  example1.pseu  example2.pseu  example3.pseu  procedure_example.pseu  repeat_until.pseu  string_manipulation.pseu
docs/basics/: assignment.md
docs/statements/: repeat_until.md
pkg/: package.json  pseudocode_wasm.d.ts  pseudocode_wasm.js  pseudocode_wasm_bg.wasm  pseudocode_wasm_bg.wasm.d.ts
src/: ast.rs  cli.rs  interpreter.rs  language_service.rs  lexer.rs  lib.rs  log.rs  main.rs  parser.rs  test.pseu  wasm_interpreter.rs
unit_tests/: 2d_array.pseu  bubble_sort.pseu  foobar.pseu  test.pseu
unit_tests/full_program/: data.txt  example0.pseu
web/: docs.css  docs.html  index.html  language-service.js  main.js  style.css
web/docs/: docs.css  docs.html  docs.js
web/docs/basics/: data_types.md  declaration.md
web/docs/statements/: case_of.md  for.md  if.md  while.md
