[package]
name = "pseuCompiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "pseudocode_wasm"
crate-type = ["cdylib"]

[[bin]]
name = "pseudocode"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
colored = "2.1"
rand = "0.8"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
